# slim-mcp

./: .env.example  Dockerfile  QUICKSTART.md  README.md  TLDR.md  architecture.md  blog.md  blog2.md  docker-compose.yml  magic.md  mcp-design-patterns.md  pyproject.toml  requirements-dev.txt  requirements.txt  stack.md
app/: __init__.py  main.py  ollama.py  settings.py  tokens.py
app/gateway/: __init__.py  github_proxy.py  headers.py  middleware.py  playground.py  preview.py  transforms.py
app/persistence/: __init__.py  catalog.py  client.py  telemetry.py
app/static/: dashboard.html
scripts/: seed_catalog.py
